# field_api

./: .gitignore  CMakeLists.txt  dev_alloc_module.F90  dev_alloc_module.fypp  fieldType.py  field_4rd_gang_module.F90  field_4rd_module.F90  field_RANKSUFF_array_module.fypp  field_RANKSUFF_factory_module.fypp  field_RANKSUFF_gang_module.fypp  field_RANKSUFF_module.fypp  field_RANKSUFF_util_module.fypp  field_basic_module.F90  field_helper_module.fypp  field_module.F90  field_module.fypp  field_util_module.fypp  main.F90  pointer_to_owner_wrapper.F90
tests/: CMakeLists.txt  init_owner.F90  test_contiguous.F90  test_contiguous_array.F90  test_field_array.F90  test_field_gang_sparse_copy.F90  test_gang.F90
